--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   json_serializable: ^3.5.1
   fl_chart: ^0.20.1
   flutter_highlight: ^0.7.0
+  date_format: ^2.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
